# zero-budget-management

./: .python-version  README.md  pyproject.toml
auths/: managers.py  models.py  serializers.py  urls.py  views.py
auths/migrations/: 0001_initial.py
budgets/: models.py  serializers.py  urls.py  views.py
budgets/migrations/: 0001_initial.py
config/: settings.py  urls.py
expenditure/: models.py  serializers.py  urls.py  views.py
expenditure/migrations/: 0001_initial.py  0002_remove_expenditure_reasonable_amount_and_more.py
