[tool.poetry]
name = "budget-management"
version = "0.1.0"
description = ""
authors = ["airhac <oooh32141@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
django-environ = "^0.11.2"
django-cors-headers = "^4.3.0"
pillow = "^10.1.0"
drf-yasg = "^1.21.7"
pymysql = "^1.1.0"
dj-rest-auth = "^5.0.1"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
django-allauth = "^0.58.2"
mysqlclient = "^2.2.0"
python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
